change in styling

--- a/index.html
+++ b/index.html
@@ -81,18 +81,26 @@
   <section id="projects" class="section">
     <h2>Projects</h2>
     <div class="projects">
+      <a href="https://medg2025.org/" class="card-link">
       <div class="card">
         <h3>Charity Website</h3>
-        <p>Built a responsive website for a Muslim charity organization, including donation and project management features.</p>
+        <p>Built a fully responsive website for a Muslim charity organization using WordPress with custom internal CSS styling,
+           featuring integrated donation functionality and detailed service pages.</p>
       </div>
+      </a>
+      <a href="#" class="card-link">
       <div class="card">
-        <h3>Portfolio Website</h3>
-        <p>Designed and developed my own personal portfolio with modern animations and responsive layout.</p>
+        <h3>Bus Booking System</h3>
+        <p>Developed a fully functional Bus Booking System using HTML, CSS, and JavaScript for the front-end,
+           and Python Django for the back-end. Features include route management, seat selection, booking confirmation, and secure payment integration, all within a responsive design</p>
       </div>
+      </a>
+      <a href="#" class="card-link">
       <div class="card">
         <h3>Web Scraper Tool</h3>
         <p>Created a Python-based scraper to automate data extraction from e-commerce platforms for analytics.</p>
       </div>
+      </a>
     </div>
   </section>
 
