--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h3>Charity Website</h3>
         <p>Built a fully responsive website for a Muslim charity organization using WordPress with custom internal CSS styling,
            featuring integrated donation functionality and detailed service pages.</p>
-           <a href="https://medg2025.org/">View Live</a>
+           <a href="https://medg2025.org/" class="link">View Live</a>
       </div>
       </a>
 
@@ -100,8 +100,8 @@
         <h3>Bus Booking System</h3>
         <p>Developed a fully functional Bus Booking System using HTML, CSS, and JavaScript for the front-end,
            and Python Django for the back-end. Features include route management, seat selection, booking confirmation, and secure payment integration, all within a responsive design</p>
-        <a href="https://gananelogistic.com/">View Live</a>
-        <a href="https://github.com/hikmaladan/daily-habits-tracker">Go to The Repository</a>
+        <a href="https://gananelogistic.com/" class="link">View Live</a>
+        <a href="https://github.com/hikmaladan/daily-habits-tracker" class="link">Go to The Repository</a>
       </div>
       </a>
     
@@ -111,7 +111,7 @@
         <p>Built a responsive and user-friendly website for Ganane Logistic, a transport and logistics company. The site was developed using WordPress, with custom HTML, CSS, and JavaScript
            enhancements for interactivity and clean visual presentation. It effectively highlights the company’s logistics services, contact information, and client focus in a modern layout.</p>
 
-        <a href="https://gananelogistic.com/">View Live</a>
+        <a href="https://gananelogistic.com/" class="link">View Live</a>
         
       </div>
       </a>
@@ -121,8 +121,8 @@
         <h3>HabitFlow-Daily habit tracker</h3>
         <p>A sleek and intuitive web app designed to help users build better habits and stay consistent. HabitFlow allows users to create, track, and visualize their daily routines with progress indicators.</p>
         <p>Built with Node.js, Express, JavaScript, CSS, EJS, Passport, Mongodb and Mongoose</p>
-        <a href="https://daily-habits-tracker-production.up.railway.app/">View Live</a>
-        <a href="https://github.com/hikmaladan/daily-habits-tracker">Go to The Repository</a>
+        <a href="https://daily-habits-tracker-production.up.railway.app/" class="link">View Live</a>
+        <a href="https://github.com/hikmaladan/daily-habits-tracker" class="link">Go to The Repository</a>
       </div>
       </a>
 
@@ -131,8 +131,8 @@
          <h3>Portfolio Site</h3>
         <p>A modern and responsive personal portfolio built to showcase my skills, projects, and experience as a Web Developer and Designer. The site features a clean layout, smooth animations, and interactive elements for an engaging user experience.
         Developed using HTML, CSS, and JavaScript, with creative UI elements that highlight my expertise in frontend development, design, and user experience. Optimized for both desktop and mobile devices to ensure seamless accessibility across all platforms.</p>
-        <a href="hakimo-abdikadir-abdinoor.netlify.app/">View Live</a>
-        <a href="https://github.com/hikmaladan/my-portofolio">Go to The Repository</a>
+        <a href="hakimo-abdikadir-abdinoor.netlify.app/" class="link">View Live</a>
+        <a href="https://github.com/hikmaladan/my-portofolio" class="link">Go to The Repository</a>
       </div>
       </a>
 
@@ -142,7 +142,7 @@
         <p>A professional business website developed for Dollow Agrovet, a veterinary and agricultural supply company. The platform showcases their products, services, and contact information in a clean, modern layout that builds trust and improves customer engagement.
 
           Built using WordPress with custom internal CSS for enhanced branding and responsive design. The site is optimized for performance, mobile viewing, and SEO to attract more local customers.</p>
-          <a href="https://gananelogistic.com/">View Live</a>
+          <a href="https://gananelogistic.com/" class="link">View Live</a>
         </div>
       </a>
     </div>
